fix textarea overflow in expenses item

--- a/src/features/expenses/ExpenseItem/ExpenseItem.module.css
+++ b/src/features/expenses/ExpenseItem/ExpenseItem.module.css
@@ -79,6 +79,10 @@
   background-color: #fffd7c;
 }
 
+.textAreaExpanded {
+  overflow: auto;
+}
+
 .title {
   resize: none;
   flex-grow: 1;
